--- a/src/components/MiniCart/miniCart.css
+++ b/src/components/MiniCart/miniCart.css
@@ -1,18 +1,19 @@
 .container {
   position: absolute;
-  top: -2px;
+  top: 60px;
   left: 0;
   background: rgba(57, 55, 72, 0.22);
   width: 100%;
-  height: 100%;
+  height: calc(100% - 60px);
   opacity: 0;
   pointer-events: none;
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  z-index: 10;
 }
 
 .show {
-    opacity: 1;
-    pointer-events: all;
+  opacity: 1;
+  pointer-events: all;
 }
 
 .mini-cart {
@@ -21,15 +22,35 @@
   width: 325px;
   right: 4.5%;
   padding: 8px 16px;
+  box-shadow: var(--shadow);
+}
+
+.total__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 500;
+}
+
+.button__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 35px;
 }
 
 @media only screen and (max-width: 600px) {
   .mini-cart {
-    width: 100%;
-    right: 0;
-    left: 0;
+    /* width: 100%; */
+    /* top: 60px; */
+    /* right: 0;
+    left: 0; */
+    /* padding: 0; */
+    left: 50%;
+    transform: translateX(-50%);
   }
   .container {
-    top: 0;
+    top:200px;
+    display: flex;
   }
 }
