--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #1d1f22;
+  overflow-x: hidden;
 }
 
 code {
@@ -13,10 +14,10 @@ code {
 
 :root {
   /*--color-primary: #009d86;*/
-  --color-primary: #5ECE7B;
+  --color-primary: #5ece7b;
   --color-secondary: #0e0d0d;
   --color-dark: #2b2b2b;
-  --color-grey: #eee;
+  --color-grey: #8d8f9a;
   --color-grey-dark: #707070;
   --color-white: #ffffff;
   --color-danger: #e02b2b;
@@ -81,5 +82,9 @@ a {
 }
 
 p {
+  margin: 0;
+}
+
+h1 {
   margin: 0;
 }
