--- a/src/components/MiniCart/miniCartCard.css
+++ b/src/components/MiniCart/miniCartCard.css
@@ -115,8 +115,9 @@
   justify-content: center;
   font-size: 14px;
   align-items: center;
-  width: 25px;
-  height: 25px;
+  /* width: 25px;
+  height: 25px; */
+  padding: 5px;
   border: 1px solid var(--color-black);
   font-weight: 500;
   transition: all 0.2s ease;
