--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   background-color: var(--color-white);
   transition: box-shadow 0.2s ease;
+  max-width: 386px;
 }
 
 .main-card__inactive {
@@ -42,10 +43,27 @@
   background-color: var(--color-primary);
   cursor: pointer;
   opacity: 0;
-  transition: opacity .2s ease;
+  transition: opacity 0.2s ease;
 }
 
 .main-card:hover .main-card__cart {
   opacity: 1;
 }
 
+.attributes {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+
+.swatch {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  border: 1px solid var(--color-black);
+}
+
+.swatch__active {
+  border: 3px solid var(--color-primary);
+}
