--- a/src/components/dropdown/dropdown.css
+++ b/src/components/dropdown/dropdown.css
@@ -9,6 +9,8 @@
   opacity: 0;
   transition: all 0.3s ease-in-out;
   pointer-events: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .dropdown__show {
