--- a/src/pages/product/productPage.css
+++ b/src/pages/product/productPage.css
@@ -1,6 +1,19 @@
 .product-page {
   display: flex;
   gap: 40px;
+  align-items: flex-start;
+}
+
+.product-page__images {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.product-page__main-pic {
+  object-fit: contain;
+  width: 610px;
+  height: 610px;
 }
 
 .product-page__details {
@@ -17,6 +30,7 @@
   font-size: 30px;
   margin-top: 16px;
   margin-bottom: 43px;
+  cursor: context-menu;
 }
 
 .product-page__text {
@@ -40,4 +54,42 @@
 
 .product-page__desc {
   line-height: 25.59px;
+}
+
+.product-page__gallery {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 1300px) {
+  .product-page {
+    flex-direction: column;
+    align-items: center;
+  }
+  .product-page__images {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .product-page__main-pic {
+    width: 400px;
+  }
+  .product-page__details {
+    margin-left: 0;
+}
+}
+
+@media only screen and (max-width: 600px) {
+  .product-page__main-pic {
+    width: 100%;
+  }
+  .product-page__gallery {
+    width: 60px;
+    height: 60px;
+  }
+  .product-page__images {
+      gap: 10px;
+  }
 }
