--- a/src/components/cartCard/cartCard.css
+++ b/src/components/cartCard/cartCard.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 44px;
+  position: relative;
 }
 
 .cart-page__details {
@@ -30,6 +31,7 @@
 .cart-page__sizes {
   display: flex;
   gap: 12px;
+  margin-bottom: 5px;
 }
 
 .cart-page__size {
